# discord-asm

./: CHANGELOG.md  CMakeLists.txt  LOOP.md  PROMPT.md  README.md  package-lock.json  package.json
asm/x64/: gateway.asm
cshim/: json.c  time.c  ws.c
cshim/include/: internal.h
docs/ADRs/: ADR-0001-mvp-architecture.md
examples/echo/: CMakeLists.txt  main.c
include/: abi.h  opcodes.h  structs.h
scripts/: ralph-commit.ps1  ralph-commit.sh  ralph-loop.expect  ralph-loop.js  ralph-loop.ps1  ralph-watch.ps1  ralph-watch.sh
tests/: CMakeLists.txt  test_heartbeat.c  test_json.c
tests/fixtures/: heartbeat_ack.json  hello.json  ready.json
